:bug: correction z-index

--- a/communes-1/public/css/style_anjoute-game-1.css
+++ b/communes-1/public/css/style_anjoute-game-1.css
@@ -41,6 +41,7 @@
 	border-radius: 10px;
 	padding-top: 0.9vh;
 	font-family: 'Baloo Tamma 2';
+	z-index: 3;
 }
 
 .bloc-reponses {
